removed console log from comments javascript, added if statement. also fixed overfill in img for question detail. Also set img in profile css to be max width and added margin to top and left so navbar wouldnt overlap

--- a/public/stylesheets/edit.css
+++ b/public/stylesheets/edit.css
@@ -104,4 +104,5 @@ body {
 
 .question-img {
   width: 1000px;
+  max-width: 99%;
 }
