--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -5,6 +5,10 @@ a {
   padding: 50px;
 }
 
+.question-img img {
+  max-width: 90%;
+}
+
 .user-profile-content-container {
 
   background-color:  rgb(129, 127, 127);
@@ -84,6 +88,11 @@ a {
 }
 
 .main-container {
+  margin-top: 50px;
+  margin-left: 100px;
+}
+
+body {
   margin-top: 50px;
   margin-left: 100px;
 }
